--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contenido 2 HTML5</title>
+    <title>Contenido Diseño</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="/Diseño.css">
+    <link rel="stylesheet" href="Diseño.css">
 </head>
 
 <body>
