--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div >
-            <img class="logo" src="/img/html.png" alt="">
+            <img class="logo" src="img/html.png" alt="">
         </div>
     </header>
     <nav>
